// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app runs 1`] = `
<div>
  <h1>
    Contacts
  </h1>
  <h2>
    Add New
  </h2>
  <div
    className="Contact-contact-0-1-1 Contact-contactfull-0-1-2"
  >
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="firstNamefalse"
      >
        First Name: *
      </label>
      <input
        id="firstNamefalse"
        name="firstName"
        onChange={[Function]}
        required="required"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="lastNamefalse"
      >
        Last Name: *
      </label>
      <input
        id="lastNamefalse"
        name="lastName"
        onChange={[Function]}
        required="required"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="addressLine1false"
      >
        Address:
      </label>
      <input
        id="addressLine1false"
        name="addressLine1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="statefalse"
      >
        State:
      </label>
      <input
        id="statefalse"
        maxLength="2"
        name="state"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="phonefalse"
      >
        Phone: *
      </label>
      <input
        id="phonefalse"
        name="phone"
        onChange={[Function]}
        required="required"
        type="tel"
        value=""
      />
    </div>
    <div
      className="Contact-requiredFields-0-1-7"
    >
      * - required fields.
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    >
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Clear"
        />
      </div>
      <div>
        <input
          disabled={true}
          onClick={[Function]}
          type="button"
          value="Add"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`app runs 2`] = `
<div>
  <h1>
    Contacts
  </h1>
  <div
    className="Contact-contact-0-1-1 Contact-contacttiny-0-1-3 Contact-contacttinyheader-0-1-4"
  >
    <div>
      First Name
    </div>
    <div>
      LastName
    </div>
    <div>
      Phone
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    />
  </div>
  <div
    className="Contact-contact-0-1-1 Contact-contacttiny-0-1-3"
  >
    <div
      aria-label="First Name"
    >
      MyFirst
    </div>
    <div
      aria-label="Last Name"
    >
      MyLast
    </div>
    <div
      aria-label="Phone"
    >
      555-123-4567
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    >
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Delete"
        />
      </div>
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Open"
        />
      </div>
    </div>
  </div>
  <h2>
    Add New
  </h2>
  <div
    className="Contact-contact-0-1-1 Contact-contactfull-0-1-2"
  >
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="firstNamefalse"
      >
        First Name: *
      </label>
      <input
        id="firstNamefalse"
        name="firstName"
        onChange={[Function]}
        required="required"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="lastNamefalse"
      >
        Last Name: *
      </label>
      <input
        id="lastNamefalse"
        name="lastName"
        onChange={[Function]}
        required="required"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="addressLine1false"
      >
        Address:
      </label>
      <input
        id="addressLine1false"
        name="addressLine1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="statefalse"
      >
        State:
      </label>
      <input
        id="statefalse"
        maxLength="2"
        name="state"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="phonefalse"
      >
        Phone: *
      </label>
      <input
        id="phonefalse"
        name="phone"
        onChange={[Function]}
        required="required"
        type="tel"
        value=""
      />
    </div>
    <div
      className="Contact-requiredFields-0-1-7"
    >
      * - required fields.
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    >
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Clear"
        />
      </div>
      <div>
        <input
          disabled={true}
          onClick={[Function]}
          type="button"
          value="Add"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`app runs 3`] = `
<div>
  <h1>
    Contacts
  </h1>
  <div
    className="Contact-contact-0-1-1 Contact-contacttiny-0-1-3 Contact-contacttinyheader-0-1-4"
  >
    <div>
      First Name
    </div>
    <div>
      LastName
    </div>
    <div>
      Phone
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    />
  </div>
  <div
    className="Contact-contact-0-1-1 Contact-contacttiny-0-1-3"
  >
    <div
      aria-label="First Name"
    >
      MyFirst
    </div>
    <div
      aria-label="Last Name"
    >
      MyLast
    </div>
    <div
      aria-label="Phone"
    >
      555-123-4567
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    >
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Delete"
        />
      </div>
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Open"
        />
      </div>
    </div>
  </div>
  <div
    className="Contact-contact-0-1-1 Contact-contacttiny-0-1-3"
  >
    <div
      aria-label="First Name"
    >
      22222
    </div>
    <div
      aria-label="Last Name"
    >
      sssss
    </div>
    <div
      aria-label="Phone"
    >
      aaaaa
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    >
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Delete"
        />
      </div>
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Open"
        />
      </div>
    </div>
  </div>
  <h2>
    Add New
  </h2>
  <div
    className="Contact-contact-0-1-1 Contact-contactfull-0-1-2"
  >
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="firstNamefalse"
      >
        First Name: *
      </label>
      <input
        id="firstNamefalse"
        name="firstName"
        onChange={[Function]}
        required="required"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="lastNamefalse"
      >
        Last Name: *
      </label>
      <input
        id="lastNamefalse"
        name="lastName"
        onChange={[Function]}
        required="required"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="addressLine1false"
      >
        Address:
      </label>
      <input
        id="addressLine1false"
        name="addressLine1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="statefalse"
      >
        State:
      </label>
      <input
        id="statefalse"
        maxLength="2"
        name="state"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        className="Contact-labelInput-0-1-6"
        htmlFor="phonefalse"
      >
        Phone: *
      </label>
      <input
        id="phonefalse"
        name="phone"
        onChange={[Function]}
        required="required"
        type="tel"
        value=""
      />
    </div>
    <div
      className="Contact-requiredFields-0-1-7"
    >
      * - required fields.
    </div>
    <div
      className="Contact-actionbuttons-0-1-5"
    >
      <div>
        <input
          onClick={[Function]}
          type="button"
          value="Clear"
        />
      </div>
      <div>
        <input
          disabled={true}
          onClick={[Function]}
          type="button"
          value="Add"
        />
      </div>
    </div>
  </div>
</div>
`;
